--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
   
   .product-image,
   .product-info {
-    margin-top: 30px;
+    margin-top: 50px;
     width: 50%;
   }
   
@@ -37,6 +37,10 @@
     width: 40px;
     height: 40px;
     margin-top: 5px;
+  }
+
+  .outOfStock {
+    text-decoration: line-through;
   }
   
   .cart {
