--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@
   
   .cart {
     margin-right: 25px;
+    margin-top: 80px;
     float: right;
     border: 1px solid #d8d8d8;
     padding: 5px 20px;
